--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer Entrega</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     
 
-
+    <div id="contenedor"></div>
 
     <script src="main.js"></script>
 </body>
