--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    
+    <div id="pie"></div>
 
     <div id="contenedor"></div>
+
+    <div id="contenedor1"></div>
 
     <script src="main.js"></script>
 </body>
