evento boton tirar dado

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="pie"></div>
 
     <div id="contenedor"></div>
+    <button id="btn1"> Tirar Dado </button>
 
     <div id="contenedor1"></div>
 
