--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button id="btn1"> Tirar Dado </button>
 
     <div id="contenedor1"></div>
+    <img id="imgPer" src="img/araña.gif" alt= "araña">
 
     <script src="main.js"></script>
 </body>
