--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
             <div id="contenedor"></div>
             <div class="ContenedorInterno">
                 <p class="instrucciones">
-                    Ayuda a nuestro Heroe a llegar a la escuela para conocer a los niños, avanza
-                    por el camino marcado y responde los desafios para continuar, presiona Tirar dado para poner el
-                    tiempo en marcha, !!Mucha Suerte!!
+                    Avanza por el camino marcado y responde los desafios para continuar, presiona Tirar dado para poner el tiempo en marcha, !!Mucha Suerte!!
                 </p>
                 <div>
                     <div class="reloj" id="Minutos"> 00</div>
@@ -51,7 +49,9 @@
         <img id="imgPer" src="img/araña.gif" alt="araña">
     </section>
     <!-- JUGADORES RECUPERADOS -->
-    <div id="contenedorJugadores"></div>
+    <div id="contenedorJugadores">
+        <p>Lista de Jugadores</p>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
