--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 class="text-center text-white">Aprende el camino a la Escuela</h2>
         <p class="text-center text-primary">Ayuda a nuestro heroe a llegar a la Escuela. </p>
         <p class="text-center text-primary">Escribe tu Alias y Escuela y pulsa agregar jugador para comenzar.</p>
-        <div class="row my-4 text-center">
+        <div class="row my-4 text-center d-inline">
             <form class="col-xl-6 col-md-12 text-info" id="formulario">
                 <label for="nombre" class="form-label">Nombre (Alias)</label>
                 <input type="text" class="form-control" id="inputAlias">
