--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             <img id="imgPer" src="img/araña.gif" alt="araña">
         </div>
     </section>
+    <!-- JUGADORES DESTACADOS -->
+    <div id="listado"><h2>Jugadores Destacados</h2> </div>
     <!-- JUGADORES RECUPERADOS -->
     <div id="contenedorJugadores">
         <button id="btnJugadores"> Lista de Jugadores </button>
