--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer Entrega</title>
+    <title>Trabajo Final</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
@@ -52,12 +52,16 @@
             <img id="imgPer" src="img/araña.gif" alt="araña">
         </div>
     </section>
-    <!-- JUGADORES DESTACADOS -->
-    <div id="listado"><h2>Jugadores Destacados</h2> </div>
-    <!-- JUGADORES RECUPERADOS -->
-    <div id="contenedorJugadores">
-        <button id="btnJugadores"> Lista de Jugadores </button>
-    </div>
+    <section>
+        <!-- JUGADORES DESTACADOS -->
+        <div id="listado">
+            <h3>Jugadores Destacados</h3>
+        </div>
+        <!-- JUGADORES RECUPERADOS -->
+        <div id="contenedorJugadores">
+            <button id="btnJugadores"> Lista de Jugadores </button>
+        </div>
+    </section>
     <!-- SWEET ALERT  -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
