--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section>
         <!-- JUGADORES DESTACADOS -->
         <div id="listado">
-            <h3>Jugadores Destacados</h3>
+            <h3>Jugadores Famosos</h3>
         </div>
         <!-- JUGADORES RECUPERADOS -->
         <div id="contenedorJugadores">
