--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div>
                 <form class="text-info text-center" id="formulario">
                     <label for="nombre" class="form-label">Nombre (Alias)</label>
-                    <input type="text" class="form-control" id="inputAlias">
+                    <input type="text" class="form-control" id="inputAlias"required>
                     <label for="text" class="form-label">Escuela representada</label>
-                    <input type="text" class="form-control" id="inputEscuela">
+                    <input type="text" class="form-control" id="inputEscuela"required>
                     <button id="botonAgregar">Agregar Jugador</button>
                 </form>
             </div>
